# Reflection

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.zh.md  xmake.lua
include/jsonc/: Reflection.hpp  reflection.hpp  reflection_.hpp
include/jsonc-reflection/: reflection.hpp
include/jsonc-reflection/detail/: Annotated.hpp  Concepts.hpp  Deserialization.hpp  Dispatcher.hpp  Expected.hpp  FixedNumber.hpp  FixedString.hpp  Meta.hpp  Ranged.hpp  Reflection.hpp  Renamed.hpp  Serialization.hpp  TypeName.hpp  TypeTraits.hpp
include/jsonc/detail/reflection/: annotated.hpp  concepts.hpp  deserialization.hpp  dispatcher.hpp  file_utils.hpp  fixed_number.hpp  fixed_string.hpp  jsonc_header.hpp  options.hpp  pfr.hpp  priority_tag.hpp  ranged.hpp  renamed.hpp  serialization.hpp  serializer.hpp  string_utils.hpp  type_traits.hpp
include/sculk/reflection/: annotated.hpp  dispatcher.hpp  file_utils.hpp  fixed_number.hpp  fixed_string.hpp  pfr.hpp  priority_tag.hpp  ranged.hpp  renamed.hpp  string_utils.hpp
include/sculk/reflection/detail/: concepts.hpp  pfr.hpp  priority_tag.hpp
include/sculk/reflection/jsonc/: reflection.hpp
include/sculk/reflection/jsonc/detail/: concepts.hpp  deserialization.hpp  jsonc_header.hpp  options.hpp  serialization.hpp  serializer.hpp  type_traits.hpp
include/sculk/reflection/utils/: file_utils.hpp  string_utils.hpp
test/: main.cpp  test_jsonc.cpp  tests.hpp
